--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 deploy:
   provider: heroku
   api_key:
-    - secure: $SECURE_KEY
+    secure: $SECURE_KEY
   app: $APP
   on:
     branch: main
